# libcamera

include/libcamera/: camera.h
src/py/: codegen.py  codegen_controls.py  meson.build  setup.py
src/py/libcamera/: meson.build  py_main.cpp
